--- a/templates/see_jobs.html
+++ b/templates/see_jobs.html
@@ -1,6 +1,87 @@
 <html>
+<head>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.flip-card {
+  background-color: transparent;
+  width: 300px;
+  height: 300px;
+  perspective: 1000px;
+}
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+.flip-card-front {
+  background-color: #bbb;
+  color: black;
+  z-index: 2;
+}
+
+.flip-card-back {
+  background-color: #2980b9;
+  color: white;
+  transform: rotateY(180deg);
+  z-index: 1;
+}
+</style>
+	
+</head>
    <body>
-   	<h1>look for job</h1>
+   <div style="margin:auto">	
+   	<h1>Look for the right work for you</h1>
+   </div>
+
+   	{% for workplace in workplaces%}
+
+
+		   	   	<div class="flip-card" style="float:left; margin:20px">
+		  <div class="flip-card-inner">
+		    <div class="flip-card-front">
+		    	<h1>{{workplace.name}}</h1>
+		    </div>
+		    <div class="flip-card-back">
+		      <h1>{{workplace.name}}</h1> 
+		      <h2>{{workplace.agelimit}}</h2> 
+		      <h2>{{workplace.location}}</h2>
+		      <h2>{{workplace.phonenumber}}</h2>
+		      <h2>{{workplace.description}}</h2>   
+		      
+		    </div>
+		  </div>
+		</div>
+
+  
+   
+   		
+   	{% endfor%}
+
+
+   
+
+
    </body>
  
 </html>
