--- a/templates/add_a_job.html
+++ b/templates/add_a_job.html
@@ -1,16 +1,55 @@
 <html>
    <body>
-   	<h1>ADD A WORKPLACE</h1>
+    <div class="H1">
+      <h1>ADD A WORKPLACE</h1>
+      
+    </div>
+
+
+
+   
 
    	<form action="/add_a_job" method="POST">
-    <input type="text" name="name" placeholder=" Name">
-    <input type="text" name="agelimit" placeholder=" Age Limit">
-    <input type="text" name="location" placeholder="Location">
-    <input type="text" name="phonenumber" placeholder="Phone Number">
-    <input type="text" name="description" placeholder=" Short Description">
+   
+
+
+
+    <div class="form">
+
+    <input type="text" name="name" placeholder=" Name"><br>
+    
+
+    <input type="text" name="agelimit" placeholder=" Age Limit"><br>
+
+    <input type="text" name="location" placeholder="Location"><br>
+    <input type="text" name="phonenumber" placeholder="Phone Number"><br>
+    <input type="text" name="description" placeholder=" Short Description"><br>
 
     <input type="submit" value="Submit">
+
+    </div>
+
+
 </form>
+
+
+  <style>
+    body{background-color: #e6ffb3}
+    .form{font:10px arial, sans-serif;
+        text-align: center;
+
+    }
+    .H1{font:30px arial,sans-serif;
+        text-align: center;}
+
+  
+
+
+
+
+
+  </style>
+
    </body>
  
 </html>
