--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,10 +1,46 @@
 <html>
    <body>
-   	<h1>Welcome!</h1>
-   	<h2>Lets get started, find your job!</h2>
-   	<a type="button" href="/add_a_job">Add a job</a>
+   	<div class="N1">
 
-   	<a type="button" href="/see_jobs">See jobs</a>
+   		<h1>Welcome!</h1>
+   	</div>
+
+   	<div class="N2">
+		<h2>Lets get started, find your job!</h2>
+   		
+   	</div>
+
+
+   	<div class = "B1">
+   		<a type="button" href="/add_a_job" >Add a job</a>
+   		
+   	</div>
+
+   	<div class="B2">
+   		<a type="button" href="/see_jobs">See jobs</a>
+
+  	</div>
+
+   
+
+
+
+   	<style>
+   		body{background-color: #e6ffb3}
+   		.N1{font:50px arial, sans-serif;
+   			text-align: center;}
+
+   		.N2{font: 20px arial,sans-serif;
+   			text-align:center;}
+
+   		.B1{font:15px arial,sans-serif:;
+   			text-align:center;}
+
+   		.B2{font:15px arial, sans-serif:;
+   			text-align:center;}
+   	</style>
+
+
    </body>
  
 </html>
